Sat Dec 14 23:02:55 GMT 2002  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html,docs/todo.xml: Updated.

Sat Dec 14 22:57:41 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/Makefile.am,backends/quartz/quartzcheck.cc,
	  backends/quartz/quartzcompact.cc,backends/quartz/quartzdump.cc:
	  Enhanced quartzcheck to check all the btrees in a quartz database
	  if passed a directory name.  It also default to "v" rather than
	  "+" which is more appropriate for an end user checking if tables
	  in a non-trivial sized database are corrupt.  Added quartzcompact
	  utility to make a copy of a quartz database with full compaction
	  turned on - this results in a smaller database which is faster to
	  search.  The next update will result in a lot of block splitting
	  though (since all blocks are as full as possible).

Sat Dec 14 16:28:11 GMT 2002  Olly Betts <olly@survex.com>

	* NEWS: Updated for 0.6.3 release.

Sat Dec 14 04:28:16 GMT 2002  Olly Betts <olly@survex.com>

	* PLATFORMS,configure.in: Version 0.6.3.

Sat Dec 14 03:54:08 GMT 2002  Olly Betts <olly@survex.com>

	* extra/omparsequery.h,extra/parsequery.yy: Create an "unstem" multimap
	  so users can convert the stemmed terms back into their query
	  representation.

Sat Dec 14 03:48:27 GMT 2002  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Sat Dec 14 02:37:41 GMT 2002  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Sat Dec 14 02:26:29 GMT 2002  Olly Betts <olly@survex.com>

	* docs/remote_protocol.html,net/socketclient.cc,net/socketserver.cc:
	  Updated remote protocol description.

Sat Dec 14 02:05:59 GMT 2002  Olly Betts <olly@survex.com>

	* docs/: Updated.

Fri Dec 13 23:43:23 GMT 2002  Olly Betts <olly@survex.com>

	* include/om/om.h.in: Removed bogus // in the middle of a comment.

Fri Dec 13 22:17:41 GMT 2002  Olly Betts <olly@survex.com>

	* configure.in,testsuite/testsuite.cc: Added hooks for using valgrind